# github-product-recommender-system

./: .gitignore  README.md  TESTING.md  app.py  dockerfile  flask-deployment.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: python-app.yml
flipkart/: config.py  data_converter.py  data_ingestion.py  rag_chain.py
prometheus/: prometheus-configmap.yaml
static/: style.css
templates/: index.html
tests/: __init__.py  conftest.py  test_basic.py  test_config.py  test_data_converter.py  test_data_ingestion.py  test_flask_app.py  test_rag_chain.py  test_utils.py
tests/data/: sample_reviews.csv
utils/: custom_exception.py
