[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "product-recommender"
version = "0.1.0"
description = "Recommendation system project"
authors = [
    { name = "Basswala" }
]
readme = "README.md"
requires-python = ">=3.9"

# Instead of reading from requirements.txt, declare dependencies directly
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "langchain-astradb",
    "langchain-huggingface",
    "langchain-core",
    "python-dotenv",
    "flask",
    "prometheus-client",
    "langchain",
    "langchain-community",
    "langchain-groq",
    "datasets",
    "pypdf"
]

# Development dependencies for testing
[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-flask>=1.2.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "faker>=19.0.0"
]

[tool.setuptools.packages.find]
include = ["flipkart*", "utils*"]
exclude = ["Data*", "static*", "templates*", "prometheus*"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--tb=short",
    "--disable-warnings"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "external: marks tests that require external services"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning"
]

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.15.1",
]
